--- a/src/app/agent-service/contrat-auto/contrat-auto.component.html
+++ b/src/app/agent-service/contrat-auto/contrat-auto.component.html
@@ -1,9 +1,9 @@
 <div class="flex bg-white min-h-screen">
   <app-dashbort></app-dashbort>
 
-  <div class="flex-1 mt-20 ml-0 mr-70">
+  <div class="flex-1 mt-20 ml-0 mr-70 ">
     <!-- Contenu principal centré -->
-    <main class="flex-1 ml-60"> <!-- ml-60 pour compenser la largeur de la sidebar -->
+    <main class="flex-1 ml-40 w-full"> <!-- ml-60 pour compenser la largeur de la sidebar -->
       <div class="max-w-6xl mx-auto p-8"><!-- Conteneur principal centré -->
         <div class="bg-white rounded-2xl shadow-xl overflow-hidden p-10 border border-gray-100">
           <div class="text-center mb-10">
