--- a/src/app/agent-service/renouvellement-ca/renouvellement-ca.component.html
+++ b/src/app/agent-service/renouvellement-ca/renouvellement-ca.component.html
@@ -2,12 +2,12 @@
   <app-dashbort></app-dashbort>
 
   <div class="flex-1 mt-20 ml-0 mr-70">
-<main class="flex-1 ml-60">
+<main class="flex-1 ml-60 w-full">
   <div class="max-w-6xl mx-auto p-8">
     <div class="relative bg-white flex flex-col items-center rounded-2xl shadow-teal-100 shadow-lg max-w-md w-full p-8">
       <div class="flex flex-col items-center mb-8 text-2xl font-semibold text-teal-800">
-        <i class="fas fa-umbrella w-8 h-8 mr-1 text-teal-800"></i>
-        <p>Flesk Cover</p>
+
+        
         <h2 class="font-semibold text-xl text-gray-700 mt-2">Renouvellement contrat auto</h2>
       </div>
       <form [formGroup]="renewalForm" (ngSubmit)="onSubmit()" class="w-full space-y-4">
